<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.korte.nummersortierung.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ohrmarkennummer"
        android:digits="0123456789."
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSetNummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:onClick="btnSendClick"
        android:text="@string/btnSendText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSortierenAnzeigen"
        android:layout_width="237dp"
        android:visibility="invisible"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="btnSortClick"
        android:text="@string/btnSort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lVOhrMarkenNummern" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:text="@string/hier_bitte_die_nummer_eintragen"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="btnResetClick"
        android:text="@string/btnReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSortierenAnzeigen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lVOhrMarkenNummern" />

    <ListView
        android:id="@+id/lVOhrMarkenNummern"
        android:layout_width="368dp"
        android:layout_height="273dp"
        android:layout_marginTop="18dp"
        android:padding="28px"
        app:layout_constraintTop_toBottomOf="@+id/btnSetNummer"
        tools:layout_editor_absoluteX="8dp"
        tools:padding="5dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="btnSaveClick"
        android:text="Speichern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSortierenAnzeigen"
        app:layout_constraintStart_toEndOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/lVOhrMarkenNummern" />
</android.support.constraint.ConstraintLayout>
